[package]
name = "task2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
lightning-invoice = "0.29.0"
csv = "1.1.6"
serde_derive = "1.0.130"
hex = "0.4.3"
lightning = "0.0.121"
