[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Add you custom dependencies below
#bitcoincore-rpc = "0.18.0"
num-bigint = "0.4.4"
num-traits = "0.2.14"
crypto = "0.5.1"
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.2" 
#bitcoin = "0.31.1"
base58 = "0.2.0"
libsecp256k1 = "0.7.1"
rand = "0.8.4"
ripemd = "0.1.3"
hmac = "0.12.1"
byteorder = "1.4.3"
serde_json = "1.0.64"
serde = "1.0"
secp256k1 = "0.28.1"